Endpoints added for job vacancies
